Added-New-Project

--- a/index.html
+++ b/index.html
@@ -623,7 +623,17 @@
                      </ul>
                   </div>
                   <div class="portfolio-container">
-                     <div class="col-lg-4 col-md-6 portfolio-thumbnail all mobile">
+                     <div class="col-lg-4 col-md-6 portfolio-thumbnail all web mobile">
+                        <a class="popup-img" href="images/portfolio/a7.png">
+                        <img src="images/portfolio/a7.png" alt="img">
+                        <a href="https://www.mcblive.com/">
+                           <p style="color: #323372;font-weight:400;"><b>MCB Live</b></p>
+                        </a>
+                        <p style="color:black">Under the umbrella of MCB Bank, Limited and TechLogix developed MCB Live - a multifaceted application that brings a seamless banking experience Live on your Palm in just a few clicks. The MCB Live web/mobile banking apps make your banking experience even more convenient than ever before with a fresh and intuitive design.
+                        </p>
+                        </a>
+                     </div>
+					 <div class="col-lg-4 col-md-6 portfolio-thumbnail all mobile">
                         <a class="popup-img" href="images/portfolio/a6.png">
                         <img src="images/portfolio/a6.png" alt="img">
                         <a href="https://www.invisily.com/">
