--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                         <p class="experience-card-company" style="color: rgb(0, 28, 85);"><a href="https://www.techlogix.com/" target="_blank" rel="noopener noreferrer">Techlogix Pakistan (PVT) Ltd.</a></p>
                      </div>
                      <div class="experience-card-heading-right">
-                        <p class="experience-card-duration" style="color: rgb(127, 141, 170);">May 2021 - PRESENT</p>
+                        <p class="experience-card-duration" style="color: rgb(127, 141, 170);">May 2021 - November 2022</p>
                         <p class="experience-card-location" style="color: rgb(127, 141, 170);">Lahore, Pakistan</p>
                      </div>
                   </div>
