--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                <div class="experience-card-body-div">
                   <div class="experience-card-header-div">
                      <div class="experience-card-heading-left">
-                        <h3 class="experience-card-title" style="color: rgb(182, 191, 84);">Software Engineer</h3>
+                        <h3 class="experience-card-title" style="color: rgb(182, 191, 84);">Senior Software Engineer</h3>
                         <p class="experience-card-company" style="color: rgb(0, 28, 85);"><a href="https://www.techlogix.com/" target="_blank" rel="noopener noreferrer">Techlogix Pakistan (PVT) Ltd.</a></p>
                      </div>
                      <div class="experience-card-heading-right">
