--- a/index.html
+++ b/index.html
@@ -77,25 +77,26 @@
 
             $("#aboutusContent").load("./pages/aboutMe.html"); 
             
-            // $("#skillContent").load("./pages/skills.html"); 
-            // $("#skillContent").load("./pages/skills.html", function() {
-            //    $(document).ready(function(){
-            //       // Adjusted to match the updated class structure
-            //       $('.services-carousel').owlCarousel({
-            //          autoplay: true,
-            //          loop: false,
-            //          margin: 20,
-            //          dots: true,
-            //          nav: false,
-            //          responsiveClass: true,
-            //          responsive: { 0: { items: 1 }, 768: { items: 2 }, 900: { items: 4 } }
-            //       });
-            //    });
-
-            // });
-
 
             $("#experienceContent").load("./pages/experience.html");             
+
+            $("#skillContent").load("./pages/skills.html", function() {
+               $(document).ready(function(){
+                  // Adjusted to match the updated class structure
+                  $('.services-carousel').owlCarousel({
+                     autoplay: true,
+                     loop: true,
+                     margin: 20,
+                     dots: true,
+                     nav: false,
+                     responsiveClass: true,
+                     responsive: { 0: { items: 1 }, 768: { items: 2 }, 900: { items: 4 } }
+                  });
+               });
+
+            });
+
+
             $("#educationContent").load("./pages/education.html"); 
             
             $("#portfolio").load("./pages/portfolio.html", function(response, status, xhr) {
