--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -14,8 +14,8 @@
           </div>
           <div class="col-lg-7">
              <div class="about-descr">
-                <p class="p-heading" style="color:black">I am a developer who loves to make applications that make a difference in people's lives.</p>
-                <p class="separator" style="color:black">Technology has played a significant role in my life, from writing the first line of code to developing real-world applications as a professional. My belief is if you want to achieve something, pursue it with total commitment, hard work, and consistency. My determined nature helped get things done because growth and progress always admired me. I am an experienced android developer with a demonstrated history of working in the computer software industry.</p>
+                <p class="p-heading" style="color:black">I am a passionate developer dedicated to leveraging AI and Data to create impactful software solutions.</p>
+                <p class="separator" style="color:black">Technology has been a transformative force in my journey, from my initial fascination with coding to my current role as a seasoned software developer. I am captivated by the potential of Artificial Intelligence and Data Science to solve real-world problems and make a tangible difference in people's lives. My approach is driven by a relentless pursuit of knowledge, steadfast dedication, and a commitment to excellence. This determination enables me to transform ideas into functional, impactful applications. With a robust background in software development and a keen focus on Android platforms, I continue to evolve, embracing challenges and advancing the frontiers of technology to improve and inspire the world around me.</p>
              </div>
           </div>
        </div>
