--- a/pages/header.html
+++ b/pages/header.html
@@ -3,7 +3,7 @@
         <div class="container">
            <div class="header-content">
               <h1>I'm <span class="typed"></span></h1>
-              <p> Web & Mobile Application Developer</p>
+              <p> <b> Web & Mobile Application Developer</b> <br> Artificial Intelligence & Data Science Enthusiast</p>
            </div>
         </div>
      </div>
