--- a/pages/nav.html
+++ b/pages/nav.html
@@ -10,6 +10,7 @@
              <li><a href="#header" class="smoothScroll"  style="color:black">Home</a></li>
              <li><a href="#about" class="smoothScroll"  style="color:black">About</a></li>
              <li><a href="#skillContent" class="smoothScroll"  style="color:black">Experience</a></li>
+             <li><a href="#educationContent" class="smoothScroll"  style="color:black">Education</a></li>
              <li><a href="#portfolio" class="smoothScroll"  style="color:black">Portfolio</a></li>
              <li><a href="#contact" class="smoothScroll"  style="color:black">Contact</a></li>
           </ul>
